--- a/css/update.css
+++ b/css/update.css
@@ -42,3 +42,10 @@ input[type="radio"] {
 .btn-outline-dark{
 margin: 0 1px;
   }
+
+#nombrenc{
+margin-top: 5px;
+  }
+  #nombreng{
+    margin-top: 5px;
+      }
